--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -4,13 +4,21 @@ div#root, .app {
     background-color: #e8e8e8;
 }
 
+main {
+    width: 100%;
+}
+
+* {
+    font-family: 'Roboto', sans-serif;
+}
+
 /********************
 Sidebar
 ********************/
 .app-sidebar {
     height: 100%;
-    padding: 19px 0;
-    overflow: hidden;
+    padding: 10px 0;
+    overflow-y: scroll;
     width: 60px;
 
     background-color: #5100f3;
@@ -57,6 +65,7 @@ Header
     padding: 9px 14px;
     width: 100%;
     font-size: 1.1em;
+    background-color: #fff;
 }
 .app-header .title {
     padding: 7px 14px;
@@ -68,6 +77,7 @@ Header
 .app-header .link {
     color: #7c7c7c;
     padding: 14px;
+    transition: color .5s;
 }
 .app-header .link:hover {
     color: #000;
@@ -75,4 +85,8 @@ Header
 }
 .app-header .link:not(:last-child){
     margin-right: 4px;
+}
+
+.app-header .app-title-container {
+    margin-top: 9px;
 }
